Native/Test/KL/return-from-procedure.out
return-from-procedure.kl:3:3: error: functions with no return types do not return values
