Native/Test/KL/return-from-procedure.kl
function entry()
{
  return 17;
}
